[project]
name = "causal-diffusion-model"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.5.2",
    "diffusers>=0.32.2",
    "ftfy>=6.3.1",
    "gdown>=5.2.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbconvert>=7.16.6",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "safetensors>=0.5.3",
    "scipy>=1.15.2",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "transformers>=4.50.0",
]
